install/acme_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /.well-known/acme-challenge/${challenge_key} {
        return 200 "${challenge_value}";
      }
spec:
  rules:
  - http:
      paths:
      - path: /not-used
        backend:
          serviceName: default-http-backend
          servicePort: 80
